# r3e-faas

./: .gitignore  Cargo.toml  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  update_edition.sh
.cargo/: config.toml
r3e/: Cargo.toml  Makefile
r3e-api/: Cargo.toml
r3e-api/src/: auth.rs  config.rs  error.rs  lib.rs  service.rs
r3e-api/src/graphql/: mod.rs  schema.rs  types.rs
r3e-api/src/models/: function.rs  mod.rs  service.rs  user.rs
r3e-api/src/routes/: auth.rs  functions.rs  graphql.rs  health.rs  mod.rs  services.rs
r3e-api/src/utils/: crypto.rs  function_validation.rs  mod.rs  validation.rs
r3e-built-in-services/: Cargo.toml
r3e-built-in-services/src/: lib.rs
r3e-built-in-services/src/auto_contract/: mod.rs  rocksdb.rs  service.rs  storage.rs  types.rs
r3e-built-in-services/src/balance/: mod.rs  rocksdb.rs  service.rs  storage.rs  types.rs
r3e-built-in-services/src/bridge/: mod.rs  service.rs  storage.rs  types.rs
r3e-built-in-services/src/fhe/: mod.rs
r3e-built-in-services/src/fhe/mock/: mod.rs
r3e-built-in-services/src/gas_bank/: mod.rs
r3e-built-in-services/src/identity/: mod.rs  service.rs  storage.rs  types.rs
r3e-built-in-services/src/indexing/: mod.rs  service.rs  storage.rs  types.rs
r3e-built-in-services/src/oracle/: mod.rs
r3e-built-in-services/src/pricing/: mod.rs  service.rs  storage.rs  types.rs
r3e-built-in-services/src/tee/: mod.rs
r3e-built-in-services/src/zk/: mod.rs
r3e-config/: Cargo.toml  README.md
r3e-config/src/: error.rs  lib.rs  loader.rs  provider.rs  types.rs
r3e-core/: Cargo.toml  README.md
r3e-core/src/: config.rs  encoding.rs  error.rs  lib.rs  logging.rs  types.rs
r3e-deno/: Cargo.toml
r3e-deno/src/: consts.rs  lib.rs  lib_test.rs  runtime.rs  sandbox.rs
r3e-deno/src/ext/: fhe.rs  mod.rs  neo.rs  neo_services.rs  oracle.rs  sandbox_permissions.rs  tee.rs  zk.rs
r3e-deno/src/js/: encoding.js  fhe.js  infra.js  neo.js  neo_services.js  oracle.js  r3e.js  sandbox.js  tee.js  time.js  zk.js
r3e-deno/src/sandbox/: mod.rs  threat_monitor.rs
r3e-deno/src/security/: mod.rs  threat_detection.rs
r3e-deno/tests/: security_tests.rs
r3e-endpoints/: Cargo.toml  README.md
r3e-endpoints/migrations/: wallet_auth.sql
r3e-endpoints/src/: app.rs  lib.rs  main.rs
r3e-endpoints/src/auth/: key_rotation.rs  mod.rs
r3e-endpoints/src/config/: mod.rs
r3e-endpoints/src/db/: mod.rs  models.rs
r3e-endpoints/src/error/: mod.rs
r3e-endpoints/src/middleware/: audit.rs  key_rotation.rs  mod.rs  rate_limit.rs  security_headers.rs  validation.rs
r3e-endpoints/src/routes/: mod.rs
r3e-endpoints/src/routes/auth/: api_keys.rs  mod.rs  wallet.rs  wallet_test.rs
r3e-endpoints/src/routes/health/: mod.rs
r3e-endpoints/src/routes/meta_tx/: mod.rs
r3e-endpoints/src/service/: mod.rs
r3e-endpoints/src/types/: mod.rs  validation.rs
r3e-endpoints/src/utils/: mod.rs
r3e-endpoints/tests/: api_security_tests.rs  security_headers_tests.rs  validation_tests.rs
r3e-event/: Cargo.toml  README.md  build.rs
r3e-event/proto/: registry.proto
r3e-event/src/: config.rs  error.rs  lib.rs  types.rs
r3e-event/src/registry/: examples.rs  mod.rs  registry.rs  rocksdb.rs  service.rs  storage.rs
r3e-event/src/source/: ethereum.rs  event_filter.rs  event_processor.rs  event_processor_service.rs  events.rs  events_ext.rs  events_test.rs  mock.rs  mod.rs  neo.rs  service.rs
r3e-event/src/trigger/: callback.rs  evaluator.rs  function_service.rs  integration.rs  mock.rs  mod.rs  service.rs  trigger_service.rs  types.rs
r3e-fhe/: Cargo.toml
r3e-fhe/src/: config.rs  error.rs  lib.rs  service.rs  types.rs
r3e-fhe/src/scheme/: mod.rs  openfhe.rs  tfhe.rs
r3e-fhe/src/storage/: memory.rs  mod.rs  rocksdb.rs
r3e-neo-services/: Cargo.toml
r3e-neo-services/src/: error.rs  lib.rs  types.rs
r3e-neo-services/src/abstract_account/: mod.rs  service.rs  storage.rs  types.rs
r3e-neo-services/src/gas_bank/: mod.rs  rocksdb.rs  service.rs  storage.rs  types.rs
r3e-neo-services/src/meta_tx/: mod.rs  service.rs  storage.rs  types.rs
r3e-oracle/: Cargo.toml
r3e-oracle/src/: auth.rs  lib.rs  service.rs  types.rs
r3e-oracle/src/gateway/: ethereum.rs  mod.rs  neo.rs
r3e-oracle/src/provider/: mod.rs  price.rs  random.rs
r3e-oracle/src/registry/: mod.rs  price_index.rs
r3e-runtime/: Cargo.toml
r3e-runtime/src/: lib.rs
r3e-runtime/src/runtime/: event.rs  extension.rs  jscall.rs  mod.rs  stats.rs
r3e-runtime/src/types/: buffer.rs  exception.rs  mod.rs  to_rust_number.rs  to_rust_value.rs  to_v8_return.rs  to_v8_value.rs
r3e-secrets/: Cargo.toml
r3e-secrets/src/: audit.rs  lib.rs  rocksdb.rs  service.rs  storage.rs  vault.rs
r3e-secrets/tests/: vault_tests.rs
r3e-store/: Cargo.toml  README.md
r3e-store/examples/: rocksdb_example.rs
r3e-store/src/: config.rs  error.rs  lib.rs  rocksdb.rs  types.rs
r3e-store/src/repository/: mod.rs  service.rs  thread_safe.rs  user.rs
r3e-store/src/storage/: mod.rs  rocksdb.rs
r3e-store/tests/: direct_test.rs  simple_test.rs
r3e-tee/: Cargo.toml
r3e-tee/src/: attestation.rs  enclave.rs  key_management.rs  lib.rs  provider.rs  service.rs  types.rs
r3e-tee/src/provider/: mod.rs  nitro.rs  provider.rs  provider_impl.rs
r3e-worker/: Cargo.toml
r3e-worker/src/: assign.rs  builder.rs  container.rs  function.rs  function_executor.rs  lib.rs  neo_task_source.rs  pool.rs  runner.rs  sandbox.rs  sandbox_executor.rs  worker.rs
r3e-worker/src/metrics/: mod.rs
r3e-worker/tests/: container_tests.rs
r3e-zk/: Cargo.toml
r3e-zk/src/: config.rs  error.rs  lib.rs  service.rs  types.rs
r3e-zk/src/provider/: arkworks.rs  bellman.rs  bulletproofs.rs  circom.rs  mod.rs  zokrates.rs
r3e-zk/src/storage/: memory.rs  mod.rs  rocksdb.rs
r3e/config/: log.main.yaml
r3e/src/: main.rs  worker.rs
tests/neo-n3/neo-services/: Cargo.toml  abstract_account_service_test.rs  eip712_test.rs  gas_bank_service_test.rs  gas_bank_test.rs  meta_tx_ethereum_test.rs  meta_tx_service_test.rs  oracle_service_test.rs
(+416 files in other folders)
