# Copyright @ 2023 - 2024, R3E Network
# All Rights Reserved

[package]
name = "simple_test"
version = "0.1.0"
edition = "2021"


[dependencies]
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
