
# Copyright @ 2023 - 2024, R3E Network
# All Rights Reserved

[workspace]
resolver = "2"
members = [
    "r3e",
    "r3e-api",
    "r3e-built-in-services",
    "r3e-config",
    "r3e-core",
    "r3e-deno",
    "r3e-endpoints",
    "r3e-event",
    "r3e-fhe",
    "r3e-neo-services",
    "r3e-oracle",
    "r3e-proc-macros",
    "r3e-runtime",
    "r3e-runlog",
    "r3e-scheduler",
    "r3e-secrets",
    "r3e-stock",
    "r3e-store",
    "r3e-tee",
    "r3e-worker",
    "r3e-zk",
]

# Default settings for all workspace members
[workspace.package]
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[package]
name = "test-serde-v8"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_v8 = { version = "0.180.0" }
v8 = { version = "0.87.0", default-features = false }

[patch.crates-io]
home = "=0.5.5"
