# Copyright @ 2023 - 2024, R3E Network
# All Rights Reserved

[workspace]
resolver = "2"
members = [
    "r3e",
    "r3e-api",
    "r3e-built-in-services",
    "r3e-config",
    "r3e-core",
    "r3e-deno",
    "r3e-endpoints",
    "r3e-event",
    "r3e-fhe",
    "r3e-neo-services",
    "r3e-oracle",
    "r3e-proc-macros",
    "r3e-runtime",
    "r3e-runlog",
    "r3e-scheduler",
    "r3e-secrets",
    "r3e-stock",
    "r3e-store",
    "r3e-tee",
    "r3e-worker",
    "r3e-zk",
]

# Default settings for all workspace members
[workspace.package]
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[package]
name = "r3e-faas-root"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
log = "0.4"
r3e-core = { path = "r3e-core" }
r3e-deno = { path = "r3e-deno" }
r3e-endpoints = { path = "r3e-endpoints" }
r3e-event = { path = "r3e-event" }
r3e-secrets = { path = "r3e-secrets" }
r3e-store = { path = "r3e-store" }
r3e-worker = { path = "r3e-worker" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
