[package]
name = "r3e-api"
version = "0.1.0"
edition = "2021"

[dependencies]
r3e-event   = { path = "../r3e-event" }
r3e-deno    = { path = "../r3e-deno" }
r3e-core    = { path = "../r3e-core" }
r3e-oracle  = { path = "../r3e-oracle" }
r3e-tee     = { path = "../r3e-tee" }

# Neo N3 SDK
NeoRust = { git = "https://github.com/R3E-Network/NeoRust.git" }

# Web framework
axum        = { version = "0.6", features = ["headers", "multipart"] }
tower       = { version = "0.4" }
tower-http  = { version = "0.4", features = ["cors", "trace", "compression-gzip"] }
hyper       = { version = "0.14" }

# Async runtime
tokio       = { version = "1", features = ["full"] }
futures     = { version = "0.3" }

# Serialization
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }

# GraphQL
async-graphql = { version = "5.0", features = ["chrono", "dataloader"] }
async-graphql-axum = { version = "5.0" }

# Authentication
jsonwebtoken = { version = "8.1" }
argon2      = { version = "0.4" }
rand        = { version = "0.8" }

# Database
sqlx        = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }
uuid        = { version = "1.0", features = ["v4", "serde"] }

# Logging and error handling
log         = { version = "0.4" }
env_logger  = { version = "0.10" }
thiserror   = { version = "1.0" }
anyhow      = { version = "1.0" }

# Utilities
chrono      = { version = "0.4", features = ["serde"] }
dotenv      = { version = "0.15" }
validator   = { version = "0.16", features = ["derive"] }
tracing     = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
