cargo-features = ["edition2024"]
# Copyright @ 2023 - 2024, R3E Network
# All Rights Reserved

[package]
name = "r3e-config"
version = "0.1.0"
edition = "2024"
authors = ["R3E Network Team"]
description = "Configuration management for the R3E FaaS platform"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
dotenv = "0.15"
config = "0.13"
log = "0.4"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
