# Copyright @ 2023 - 2024, R3E Network
# All Rights Reserved

[package]
name = "r3e-core"
version = "0.1.0"
edition = "2021"


[dependencies]
r3e-proc-macros = { path = "../r3e-proc-macros"}

v8 = { version = "0.87.0", default-features = false }

log          = { version = "0.4" }
signal-hook  = { version = "0.3" }

cfg-if       = { version = "1" }
git-version  = { version = "0.3" }
compile-time = { version = "0.2" }
const_format = { version = "0.2"}

# Added dependencies
serde        = { version = "1.0", features = ["derive"] }
serde_json   = { version = "1.0" }
thiserror    = { version = "1.0" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
