# Copyright @ 2023 - 2024, R3E Network
# All Rights Reserved

[package]
name = "r3e-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.2.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
v8 = { version = "0.68.0", default-features = false }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
