# Copyright @ 2023 - 2024, R3E Network
# All Rights Reserved

[package]
name = "r3e-deno"
version = "0.1.0"
edition = "2021"


[dependencies]
r3e-core    = { path = "../r3e-core" }
r3e-event   = { path = "../r3e-event" }

deno_core   =  { version = "0.272.0" }
v8          =  { version = "0.106.0", default-features = false }

serde       = { version = "1" }
serde_v8    = { version = "0.180.0" }

tokio       =  { version = "1", features = ["full"]}
futures     =  { version = "0.3" }

anyhow      =  { version = "1" }
thiserror   =  { version = "2.0.11" }

lazy_static =  { version = "1" }

# Neo N3 SDK
neo3 = { git = "https://github.com/R3E-Network/NeoRust.git" }
url         = { version = "2" }
hex         = { version = "0.4" }

[dev-dependencies]

