# Copyright @ 2023 - 2024, R3E Network
# All Rights Reserved

[package]
name = "r3e-deno"
version = "0.1.0"
edition = "2021"

[dependencies]
r3e-core    = { path = "../r3e-core" }
r3e-event   = { path = "../r3e-event" }

deno_core   = "0.68.0"
v8          = { version = "0.68.0", default-features = false }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_v8    = "0.68.0"

tokio       = { version = "1", features = ["full"]}
futures     = "0.3"
bytes       = "1.2.1"

anyhow      = "1.0"
thiserror   = "1.0"
log         = "0.4"
async-trait = "0.1"

# Neo N3 SDK
neo3 = { git = "https://github.com/R3E-Network/NeoRust.git" }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
