[package]
name = "r3e-endpoints"
version = "0.1.0"
edition = "2021"
authors = ["R3E Network"]
description = "RESTful API endpoints for r3e-faas platform"
license = "MIT"

[dependencies]
r3e-api = { path = "../r3e-api" }
r3e-core = { path = "../r3e-core" }
r3e-neo-services = { path = "../r3e-neo-services" }
r3e-deno = { path = "../r3e-deno" }

# Neo N3 SDK
neo3 = { git = "https://github.com/R3E-Network/NeoRust.git" }

# Web framework
axum = { version = "0.6", features = ["headers", "multipart"] }
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["cors", "trace", "compression-gzip", "limit"] }
hyper = { version = "0.14" }
governor = { version = "0.5", features = ["std", "jitter"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Authentication
jsonwebtoken = { version = "8.1" }
argon2 = { version = "0.4" }
rand = { version = "0.8" }

# Ethereum integration
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-signers = "2.0"

# Logging and error handling
log = { version = "0.4" }
env_logger = "^0.11.3"
thiserror = { version = "2.0.11" }
anyhow = { version = "1.0" }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenv = { version = "0.15" }
uuid = { version = "1.3", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[[bin]]
name = "r3e-endpoints"
path = "src/main.rs"

[lib]
name = "r3e_endpoints"
path = "src/lib.rs"
