# Copyright @ 2023 - 2024, R3E Network
# All Rights Reserved

[package]
name = "r3e-fhe"
version = "0.1.0"
edition = "2021"
authors = ["R3E Network Team"]
description = "Fully Homomorphic Encryption service for the R3E FaaS platform"
license = "MIT"

[dependencies]
tfhe = { version = "0.0.0", package = "tfhe-rs" }
r3e-core = { path = "../r3e-core" }
r3e-store = { path = "../r3e-store" }
r3e-tee = { path = "../r3e-tee" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
rocksdb = "0.20"
log = "0.4"
futures = "0.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
