[package]
name = "r3e-neo-services"
version = "0.1.0"
edition = "2021"
authors = ["R3E Network"]
description = "Neo N3 blockchain services for r3e-faas platform"
license = "MIT"

[dependencies]
NeoRust = { git = "https://github.com/R3E-Network/NeoRust.git" }
r3e-store = { path = "../r3e-store" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
hex = "0.4"
