cargo-features = ["edition2024"]
[package]
name = "r3e-oracle"
version = "0.1.0"
edition = "2024"

[dependencies]
r3e-event   = { path = "../r3e-event" }
r3e-deno    = { path = "../r3e-deno" }
r3e-core    = { path = "../r3e-core" }

# Neo N3 SDK
neo3 = { git = "https://github.com/R3E-Network/NeoRust.git" }

# Ethereum SDK
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }

# Async runtime
tokio       = { version = "1", features = ["full"] }
futures     = { version = "0.3" }

# Serialization
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }

# Networking
reqwest     = { version = "0.11", features = ["json"] }
url         = { version = "2" }

# Cryptography
rand        = { version = "0.8" }
sha2        = { version = "0.10" }
hmac        = { version = "0.12" }
hex         = { version = "0.4" }

# Logging and error handling
log         = { version = "0.4" }
thiserror   = { version = "1.0" }
anyhow      = { version = "1.0" }

# Time handling
chrono      = { version = "0.4" }

# Rate limiting
governor    = { version = "0.5" }

# Authentication
jsonwebtoken = { version = "8" }

# Storage
sled        = { version = "0.34" }

[dev-dependencies]
tokio-test  = { version = "0.4" }
mockall     = { version = "0.11" }
