# Copyright @ 2023 - 2024, R3E Network
# All Rights Reserved

[package]
name = "r3e-runtime"
version = "0.1.0"
edition = "2021"


[dependencies]
r3e-core  = { path = "../r3e-core" }

v8 = { version = "0.87.0", default-features = false }
serde_v8  =  { version = "0.180.0" }
serde     =  { version = "1", features = ["derive"] }

thiserror =  { version = "1" }


[dev-dependencies]
