# Copyright @ 2023 - 2024, R3E Network
# All Rights Reserved

[package]
name = "r3e-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
r3e-core    = { path = "../r3e-core" }
r3e-event   = { path = "../r3e-event" }

deno_core   = "0.230.0"
v8          = { version = "0.74.3", default-features = false }
serde_v8    = "0.230.0"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

tokio       = { version = "1", features = ["full"]}
futures     = "0.3"
bytes       = "1.6.0"

anyhow      = "1.0"
thiserror   = "1.0"
log         = "0.4"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
