# Copyright @ 2023 - 2024, R3E Network
# All Rights Reserved

[package]
name = "r3e-store"
version = "0.1.0"
edition = "2021"


[dependencies]
r3e-core    = { path = "../r3e-core" }

thiserror   = { version = "1" }
rocksdb     = { version = "0.21.0" }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }
async-trait = { version = "0.1" }
tokio       = { version = "1.0", features = ["full"] }
