# Copyright @ 2023 - 2024, R3E Network
# All Rights Reserved

[package]
name = "r3e-store"
version = "0.1.0"
edition = "2021"


[dependencies]
r3e-core    = { path = "../r3e-core" }

thiserror   = { version = "1" }
rocksdb     = { version = "0.21.0", features = ["multi-threaded-cf"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }
bincode     = { version = "1.3" }
async-trait = { version = "0.1" }
tokio       = { version = "1.0", features = ["full"] }
log         = { version = "0.4" }
num_cpus    = { version = "1.16" }

[dev-dependencies]
uuid       = { version = "1.3", features = ["v4", "serde"] }
env_logger = "0.10"

[[example]]
name = "rocksdb_example"
path = "examples/rocksdb_example.rs"
