[package]
name = "r3e-tee"
version = "0.1.0"
edition = "2021"

[dependencies]
r3e-event   = { path = "../r3e-event" }
r3e-deno    = { path = "../r3e-deno" }
r3e-core    = { path = "../r3e-core" }

# Neo N3 SDK
NeoRust = { git = "https://github.com/R3E-Network/NeoRust.git" }

# Async runtime
tokio       = { version = "1", features = ["full"] }
futures     = { version = "0.3" }

# Serialization
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }

# Cryptography
rand        = { version = "0.8" }
sha2        = { version = "0.10" }
hmac        = { version = "0.12" }
hex         = { version = "0.4" }

# Logging and error handling
log         = { version = "0.4" }
thiserror   = { version = "1.0" }
anyhow      = { version = "1.0" }

# TEE-specific dependencies
sgx_types   = { version = "1.1.1", optional = true }
sgx_urts    = { version = "1.1.1", optional = true }
sgx_tstd    = { version = "1.1.1", optional = true }
sgx_tcrypto = { version = "1.1.1", optional = true }

# For AMD SEV support
sev         = { version = "1.2.0", optional = true }

# Mock dependencies for development
mockall = { version = "0.11" }


[features]
default = []
sgx = ["sgx_types", "sgx_urts", "sgx_tstd", "sgx_tcrypto"]
sev = ["dep:sev"]

[dev-dependencies]
tokio-test  = { version = "0.4" }
mockall     = { version = "0.11" }
