# Copyright @ 2023 - 2024, R3E Network
# All Rights Reserved

[package]
name = "r3e-zk"
version = "0.1.0"
edition = "2021"
authors = ["R3E Network Team"]
description = "Zero-Knowledge computing service for the R3E FaaS platform"
license = "MIT"

[dependencies]
#zokrates_core = { version = "0.8", optional = true }
bulletproofs = { version = "4.0", optional = true }
r3e-core = { path = "../r3e-core" }
r3e-store = { path = "../r3e-store" }
r3e-tee = { path = "../r3e-tee" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
rocksdb = { version = "0.20", optional = true }
log = "0.4"
futures = "0.3"
uuid = { version = "1.3", features = ["v4", "serde"] }

[features]
default = ["bulletproofs", "rocksdb"]
#zokrates = ["zokrates_core"]
bulletproofs = ["dep:bulletproofs"]
circom = []
bellman = []
arkworks = []
