[package]
name = "r3e-faas"
version = "0.1.0"
edition = "2021"




[dependencies]
r3e-core      = { path = "../r3e-core" }
r3e-deno      = { path = "../r3e-deno" }
r3e-worker    = { path = "../r3e-worker" }
r3e-scheduler = { path = "../r3e-scheduler" }
r3e-runlog    = { path = "../r3e-runlog" }

clap         = { version = "4.5", features = ["derive"] }

log          = { version = "0.4" }
log4rs       = { version = "1.3" }

anyhow       = { version = "1" }
duration-str = { version = "0.11", default-features = false, features = ["serde"] }

serde        = { version = "1" }
serde_json   = { version = "1" }
serde_yaml   = { version = "0.9" }
