[package]
name = "r3e-neo-services-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
r3e-neo-services = { path = "../../../r3e-neo-services" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
neo3 = { git = "https://github.com/R3E-Network/NeoRust.git" }
ethers-core = "2.0"
hex = "0.4"
uuid = { version = "1.3", features = ["v4", "serde"] }

[[test]]
name = "eip712_test"
path = "eip712_test.rs"

[[test]]
name = "meta_tx_ethereum_test"
path = "meta_tx_ethereum_test.rs"
